--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,10 +44,13 @@
     ]
   },
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.7.0",
+    "@emotion/react": "^11.9.3",
     "@titicaca/eslint-config-triple": "^3.1.0",
     "eslint": "^8.18.0",
-    "eslint-plugin-promise": "^6.0.0",
     "eslint-config-standard": "^17.0.0",
-    "eslint-config-standard-jsx": "^11.0.0"
+    "eslint-config-standard-jsx": "^11.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "typescript": "^4.7.4"
   }
 }
